--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
     "@types/react-scroll": "^1.8.2",
-    "@types/styled-components": "^5.1.9",
-    "@types/yup": "^0.29.11",
     "axios": "^0.21.1",
     "formik": "^2.2.8",
     "react": "^17.0.2",
@@ -52,6 +50,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.9",
+    "@types/yup": "^0.29.11"
   }
 }
